--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{% static 'catalog/css/main.css' %}">
   {% block extra_css %}{% endblock %}
 </head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
   <div class="container">
